netpol-secctx-sa-rbac/01.nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: netpol-pod
  name: netpol-nginx-01
spec:
  containers:
    - name: nginx
      image: nginx:1.28
      ports:
        - containerPort: 80
  restartPolicy: Always
