netpol-secctx-sa-rbac/02.secctx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-02
spec:
  securityContext:
    runAsUser: 2222
    runAsGroup: 3333
  containers:
    - name: bb
      image: busybox:1.36
      command: ["sh", "-c", "sleep 360000"]
      volumeMounts:
        - mountPath: /data
          name: data
  volumes:
    - name: data
      hostPath:
        path: /mnt/data
