netpol-secctx-sa-rbac/01.netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-01
spec:
  podSelector:
    matchLabels:
      run: netpol-pod
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              allow-access: "true"
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
      - podSelector:
          matchLabels:
            allow-access: "true"
    - ports:
        - protocol: TCP
          port: 80
